platform/stack/packages/observability/faro/manifests/install.yaml
# FARO INSTALL RESOURCES
# This file is auto-generated with 'platform/stack/packages/observability/faro/generate-manifests.sh'
---
# Source: alloy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faro-alloy
  namespace: adhar-system
  labels:
    helm.sh/chart: alloy-1.12.1
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: faro
    app.kubernetes.io/version: "v1.19.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: alloy
    app.kubernetes.io/component: networking
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: faro
  internalTrafficPolicy: Cluster
  ports:
    - name: http-metrics
      port: 12345
      targetPort: 12345
      protocol: "TCP"
    - name: faro
      port: 12347
      targetPort: 12347
      protocol: TCP
---
# Source: alloy/templates/controllers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faro-alloy
  namespace: adhar-system
  labels:
    helm.sh/chart: alloy-1.12.1
    app.kubernetes.io/name: alloy
    app.kubernetes.io/instance: faro
    app.kubernetes.io/version: "v1.19.2"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: alloy
spec:
  replicas: 1
  minReadySeconds: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: alloy
      app.kubernetes.io/instance: faro
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: alloy
      labels:
        app.kubernetes.io/name: alloy
        app.kubernetes.io/instance: faro
    spec:
      serviceAccountName: faro-alloy
      containers:
        - name: alloy
          image: docker.io/grafana/alloy:v1.19.2
          imagePullPolicy: IfNotPresent
          args:
            - run
            - /etc/alloy/config.alloy
            - --storage.path=/tmp/alloy
            - --server.http.listen-addr=0.0.0.0:12345
            - --server.http.ui-path-prefix=/
            - --stability.level=generally-available
          ports:
            - containerPort: 12345
              name: http-metrics
            - containerPort: 12347
              name: faro
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 12345
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
        - name: config-reloader
          image: quay.io/prometheus-operator/prometheus-config-reloader:v0.91.0@sha256:7d9e4eea5f1139e602508871f422b0116c60e87c662f3dcd234d5ab60cd0d8c1
          imagePullPolicy: IfNotPresent
          args:
            - --watched-dir=/etc/alloy
            - --reload-url=http://localhost:12345/-/reload
          volumeMounts:
            - name: config
              mountPath: /etc/alloy
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 65534
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
      dnsPolicy: ClusterFirst
      volumes:
        - name: config
          configMap:
            name: faro-alloy
